--- a/templates/yourheat/orderforms/financeform.html
+++ b/templates/yourheat/orderforms/financeform.html
@@ -54,6 +54,7 @@
 
                     {{ wizard.form.product_price.as_hidden }}
                     {{ wizard.form.component_price_total.as_hidden }}
+                    {{ wizard.form.parts_price_total.as_hidden }}
                     {{ wizard.form.estimated_duration_cost.as_hidden }}
                     {{ wizard.form.component_duration_total.as_hidden }}
                     {{ wizard.form.alt_total_cost.as_hidden }}
