--- a/templates/base.html
+++ b/templates/base.html
@@ -56,15 +56,18 @@
             <a class="dropdown-item" href="/productcomponentlist/?filter=Chemical System Treatment">Chemical System Treatment</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Condenstate Component">Condenstate Component</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Customer Supplied Radiator">Customer Supplied Radiator</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Cylinder">Cylinder</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Double Handed Lift">Double Handed Lift</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Earth Spike">Earth Spike</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Electrical Pack">Electrical Pack</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Electrical Work">Electrical Work</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Estimated Duration">Estimated Duration</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Filling Link">Filling Link</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Fitting Pack">Fitting Pack</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Fuel Supply Length">Fuel Supply Length</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Gas Flue Component">Gas Flue Component</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Oil Flue Component">Oil Flue Component</a>
+            <a class="dropdown-item" href="/productcomponentlist/?filter=Parking">Parking</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Plume Component">Plume Component</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Programmer Thermostat">Programmer Thermostat</a>
             <a class="dropdown-item" href="/productcomponentlist/?filter=Radiator">Radiator</a>
