YH Pagination and Component Name changes

--- a/templates/quotepad/productcomponent_list.html
+++ b/templates/quotepad/productcomponent_list.html
@@ -8,6 +8,7 @@
     <div class="row">
         <div class="col-12">
             <h2>List of Components</h2>
+            <h4>{{request.GET.filter}}</h4>
         </div>
     </div>
 
